fixed footer spacing

--- a/src/Footer.css
+++ b/src/Footer.css
@@ -4,7 +4,7 @@ footer {
   width: 100%;
   height: 40px;
   position: absolute;
-  bottom: 5%;
+  bottom: 6%;
 }
 
 .footer-title {
